docs: add LaTeX CV template

--- a/report/Body/Backmatter/CV.tex
+++ b/report/Body/Backmatter/CV.tex
@@ -1,10 +1,58 @@
-\chapter*{CV}
-\addcontentsline{toc}{chapter}{CV}
+\chapter*{Curriculum Vitae}
+\addcontentsline{toc}{chapter}{Curriculum Vitae}
 
-%% Edit below this line
-XXX.
+\section*{Tugay Talha İçen}
+\href{https://www.linkedin.com/in/tugay-talha-icen}{LinkedIn} \quad \textbullet \quad \href{https://github.com/Tugaytalha}{GitHub}
 
+\section*{Experience}
 
+\begin{itemize}
+    \item \textbf{Data Scientist}, AlbarakaTech Global \hfill Dec 2023 - Present
+    \begin{itemize}
+        \item Worked on on-premise RAG systems.
+        \item Technologies used: LangChain, Large Language Models, etc.
+    \end{itemize}
+    \item \textbf{Ambassador}, HUAWEI Student Developers (HSD) Turkey \hfill Aug 2023 - Present
+    \item \textbf{Cloud Engineer Intern}, Huawei \hfill Jun 2023 - Aug 2023
+    \begin{itemize}
+        \item Interned on DevOps and Cloud technologies.
+    \end{itemize}
+    \item \textbf{Computer Vision Developer}, GTU Rover Team \hfill May 2023 - Apr 2024
+    \begin{itemize}
+        \item Developed Computer Vision for the rover and supported other software tasks.
+    \end{itemize}
+    \item \textbf{Member of the Mathematics Committee}, IEEE Gebze Technical University \hfill Oct 2021 - Jul 2024
+\end{itemize}
 
-%% Until here
+\section*{Education}
+
+\begin{itemize}
+    \item \textbf{Gebze Technical University} \hfill Sep 2021 - Jun 2025
+    \begin{itemize}
+        \item Bachelor's Degree, Computer Engineering
+    \end{itemize}
+    \item \textbf{Med Marine Science High School} \hfill 2017 - 2021
+\end{itemize}
+
+\section*{Projects}
+\begin{itemize}
+    \item \textbf{NarraPhon}: An AI application that creates personalized educational videos by voicing the notes in PowerPoint presentations with the voice of the person in the uploaded audio file.
+    \item \textbf{Sun Farm}: An AI-based model that predicts solar energy production and a C2C platform for electricity and panel sales.
+\end{itemize}
+
+\section*{Skills}
+\begin{itemize}
+    \item \textbf{Programming Languages \& Technologies:} Python, Java, C, Docker, Git
+    \item \textbf{Artificial Intelligence \& Data Science:} Large Language Models (LLMs), LangChain, RAG, Computer Vision, Deep Learning, spaCy, NLTK
+    \item \textbf{Cloud & DevOps:} Huawei Cloud, General DevOps principles
+\end{itemize}
+
+\section*{Certifications and Awards}
+\begin{itemize}
+    \item \textbf{Award:} Huawei ICT Competition 2023-2024 - European 3rd Place (Cloud Track)
+    \item \textbf{Award:} KodFl High School Coding Competition - 5th Place
+    \item \textbf{Certificate:} HCCDA - AI, Huawei
+    \item \textbf{Certificate:} Data or Specimens Only Research, CITI Program
+\end{itemize}
+
 \clearpage
