docs: expand LaTeX bibliography with comprehensive RAG & radiology refs

--- a/report/Body/Backmatter/References.tex
+++ b/report/Body/Backmatter/References.tex
@@ -3,50 +3,94 @@
 
 \begin{thebibliography}{99}
 
-\bibitem{rag}
-Lewis, P., Perez, E., Piktus, A., Petroni, F., Karpukhin, V., Goyal, N., ... \& Kiela, D. (2020).
-\textit{Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks.}
-Advances in Neural Information Processing Systems, 33, 9459-9474.
+\bibitem{rag_lewis_2020}
+P. Lewis, E. Perez, A. Piktus, et al., "Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks," \textit{Advances in Neural Information Processing Systems}, vol. 33, pp. 9459--9474, 2020.
 
-\bibitem{langchain}
-Chase, H. (2022).
-\textit{LangChain}.
-\url{https://github.com/langchain-ai/langchain}
+\bibitem{whisper_radford_2023}
+A. Radford, J. W. Kim, T. Xu, et al., "Robust Speech Recognition via Large-Scale Weak Supervision," \textit{arXiv preprint arXiv:2212.04356}, 2023.
 
-\bibitem{ollama}
-Ollama Team (2023).
-\textit{Ollama}.
-\url{https://github.com/ollama/ollama}
+\bibitem{langchain_chase_2022}
+H. Chase, "LangChain," 2022. [Online]. Available: \url{https://github.com/langchain-ai/langchain}
 
-\bibitem{llama3}
-AI at Meta (2024).
-\textit{Meta Llama 3}.
-\url{https://ai.meta.com/blog/meta-llama-3/}
+\bibitem{ollama_2023}
+Ollama Team, "Ollama," 2023. [Online]. Available: \url{https://github.com/ollama/ollama}
 
-\bibitem{chromadb}
-ChromaDB Team (2023).
-\textit{Chroma - The AI-native open-source embedding database}.
-\url{https://github.com/chroma-core/chroma}
+\bibitem{chromadb_2023}
+ChromaDB Team, "Chroma - The AI-native open-source embedding database," 2023. [Online]. Available: \url{https://github.com/chroma-core/chroma}
 
-\bibitem{gradio}
-Gradio Team (2021).
-\textit{Gradio: Build \& Share Delightful ML Apps}.
-\url{https://github.com/gradio-app/gradio}
+\bibitem{gradio_2021}
+Gradio Team, "Gradio: Build \& Share Delightful ML Apps," 2021. [Online]. Available: \url{https://github.com/gradio-app/gradio}
 
-\bibitem{whisper}
-Radford, A., Kim, J. W., Xu, T., Brockman, G., McLeavey, C., \& Sutskever, I. (2023).
-\textit{Robust Speech Recognition via Large-Scale Weak Supervision.}
-arXiv preprint arXiv:2212.04356.
+\bibitem{sentence_transformers_reimers_2019}
+N. Reimers and I. Gurevych, "Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks," in \textit{Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing}, 2019, pp. 3982--3992.
 
-\bibitem{sentence-transformers}
-Reimers, N., \& Gurevych, I. (2019).
-\textit{Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks.}
-Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing.
-\url{https://github.com/UKPLab/sentence-transformers}
+\bibitem{llama3_meta_2024}
+AI at Meta, "Meta Llama 3," 2024. [Online]. Available: \url{https://ai.meta.com/blog/meta-llama-3/}
 
-\bibitem{bge-m3}
-BAAI (2024).
-\textit{BGE M3-Embedding}.
-\url{https://huggingface.co/BAAI/bge-m3}
+\bibitem{gemma_team2024gemma}
+Gemma Team et al., "Gemma: Open Models Based on Gemini Research and Technology," \textit{arXiv preprint arXiv:2403.08295}, 2024.
+
+\bibitem{levenshtein_1966}
+V. I. Levenshtein, "Binary codes capable of correcting deletions, insertions, and reversals," \textit{Soviet Physics Doklady}, vol. 10, no. 8, pp. 707--710, 1966.
+
+\bibitem{intfloat_omerhan_2024}
+Omerhan, "intfloat-fine-tuned-14376-v4," 2024. [Online]. Available: \url{https://huggingface.co/Omerhan/intfloat-fine-tuned-14376-v4}
+
+\bibitem{openai_whisper_blog}
+OpenAI, "Introducing Whisper," 2022. [Online]. Available: \url{https://openai.com/blog/whisper}
+
+\bibitem{google_stt_docs}
+Google Cloud, "Google Cloud Speech-to-Text Documentation." [Online]. Available: \url{https://cloud.google.com/speech-to-text/docs}
+
+\bibitem{langchain_qa_docs}
+LangChain Team, "Use cases: Question answering." [Online]. Available: \url{https://python.langchain.com/docs/use_cases/question_answering}
+
+\bibitem{pinecone_docs}
+Pinecone, "Pinecone Documentation." [Online]. Available: \url{https://pinecone.io/docs}
+
+\bibitem{spacy_docs}
+Explosion AI, "spaCy 101: Everything you need to know." [Online]. Available: \url{https://spacy.io/usage/spacy-101}
+
+\bibitem{nltk_book}
+S. Bird, E. Klein, and E. Loper, "Natural Language Processing with Python." [Online]. Available: \url{https://www.nltk.org/book}
+
+\bibitem{dataset_kaggle_medical_speech}
+P. Mooney, "Medical Speech, Transcription, and Intent." [Online]. Available: \url{https://www.kaggle.com/datasets/paultimothymooney/medical-speech-transcription-and-intent}
+
+\bibitem{dataset_kaggle_medical_transcriptions}
+T. Boyle, "Medical Transcriptions." [Online]. Available: \url{https://www.kaggle.com/datasets/tboyle10/medicaltranscriptions}
+
+\bibitem{dataset_physionet_mimic_cxr}
+PhysioNet, "MIMIC-CXR." [Online]. Available: \url{https://physionet.org/content/mimic-cxr}
+
+\bibitem{dataset_hf_commonvoice_tr}
+Mozilla Foundation, "Common Voice 17.0 - Turkish." [Online]. Available: \url{https://huggingface.co/datasets/mozilla-foundation/common_voice_17_0/viewer/tr/train}
+
+\bibitem{dataset_hf_medturkquad}
+incidelen, "MedTurkQuAD." [Online]. Available: \url{https://huggingface.co/incidelen/MedTurkQuAD}
+
+\bibitem{rsna_rag_review_2024}
+A. A. P. A. van der Lans, et al., "Retrieval-Augmented Generation with Large Language Models in Radiologic Artificial Intelligence: A Narrative Review," \textit{Radiology: Artificial Intelligence}, 2024. [Online]. Available: \url{https://pubs.rsna.org/doi/10.1148/ryai.240790}
+
+\bibitem{ranjit_rag_cxr_2023}
+S. Ranjit, et al., "Retrieval Augmented Chest X-Ray Report Generation using OpenAI GPT Models," in \textit{Proceedings of the 4th Machine Learning for Health symposium}, PMLR, 2023. [Online]. Available: \url{https://proceedings.mlr.press/v219/ranjit23a.html}
+
+\bibitem{springer_rag_trauma_2025}
+J. E. Wild, et al., "Retrieval-augmented generation improves precision and trust of a GPT-4 model in Trauma Radiology," \textit{European Radiology}, 2025. [Online]. Available: \url{https://link.springer.com/article/10.1007/s00330-025-11445-z}
+
+\bibitem{review_automated_generation_2024}
+A. K. V., et al., "Automated Radiology Report Generation: A Review of Recent Advances," \textit{ResearchGate}, June 2024. [Online]. Available: \url{https://www.researchgate.net/publication/381123720_Automated_Radiology_Report_Generation_A_Review_of_Recent_Advances}
+
+\bibitem{review_structured_reporting_2024}
+B. J. Linguist, et al., "Large Language Models for Structured Reporting in Radiology," \textit{Journal of the American College of Radiology}, 2024. [Online]. Available: \url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC12021971/}
+
+\bibitem{arxiv_cbm_rag_2024}
+Y. Li, et al., "CBM-RAG: Enhanced Interpretability in Radiology Report Generation," \textit{arXiv preprint arXiv:2404.20898}, 2024. [Online]. Available: \url{https://arxiv.org/abs/2404.20898}
+
+\bibitem{radai_commercial}
+Rad AI, "Rad AI Reporting: AI-Powered Structured Radiology Reporting Software." [Online]. Available: \url{https://www.radai.com/reporting}
+
+\bibitem{github_awesome_rad_reports}
+M. Kühn, "Awesome-Radiology-Report-Generation," GitHub Repository, 2024. [Online]. Available: \url{https://github.com/mk-runner/Awesome-Radiology-Report-Generation}
 
 \end{thebibliography} 
