docs: report refine evaluation dataset descriptions

--- a/report/Body/Mainmatter/Chapter4.tex
+++ b/report/Body/Mainmatter/Chapter4.tex
@@ -8,7 +8,7 @@ The evaluation of a clinical decision support tool like InsightBridge must be mu
 To comprehensively evaluate the system's capabilities, a dual-dataset approach was employed, combining a large-scale synthetic dataset with a smaller, high-realism clinical dataset.
 
 \begin{itemize}
-    \item \textbf{Synthetic Clinical Dataset (\texttt{ecgen-radiology-tts}):} To test the system's performance on a wide variety of radiological language and report structures, the publicly available `ecgen-radiology` dataset was utilized. This dataset contains a large number of real-world radiology reports. As the reports are text-based, a high-quality Text-to-Speech (TTS) engine was used to convert them into audio files, effectively creating a large, standardized dataset of synthetic dictations. This allowed for repeatable, large-scale testing of the STT and report generation pipeline.
+    \item \textbf{Synthetic Clinical Dataset (\texttt{ecgen-radiology-tts}):} To test the system's performance on a wide variety of radiological language and report structures, the publicly available `ecgen-radiology` dataset was utilized. This dataset contains a large number of real-world radiology texts. As the reports are text-based, translated the Turkish and a high-quality Text-to-Speech (TTS) engine was used to convert them into audio files, effectively creating a large, standardized dataset of synthetic dictations. This allowed for repeatable, large-scale testing of the STT and report generation pipeline.
     
     \item \textbf{Real-World Clinical Dataset (Hospital Dictations):} To evaluate the system's performance on genuine clinical data, a set of 12 anonymized radiology dictations was obtained from a hospital. These dictations represent the true complexity and variability of a radiologist's speech, including background noise, hesitations, and complex, unscripted phrasing. This dataset, while smaller, serves as a crucial benchmark for real-world applicability.
 \end{itemize}
