docs: reprot update conclusion to reference Gemma3

--- a/report/Body/Mainmatter/Chapter5.tex
+++ b/report/Body/Mainmatter/Chapter5.tex
@@ -7,7 +7,7 @@ This project, InsightBridge, has successfully developed and demonstrated a novel
 
 The key contribution of this project is the design of a specialized Retrieval-Augmented Generation (RAG) pipeline, purpose-built for report generation rather than general question-answering. We have shown that by curating a domain-specific knowledge base of clinical templates and standardized phrases, and by using a multi-step retrieval process, it is possible to guide a Large Language Model to produce output that is not only fluent but also clinically and structurally sound. The integration of a high-accuracy STT module and a minimalist, workflow-centric Gradio UI results in a tool with clear potential for practical clinical use.
 
-The successful implementation of InsightBridge, leveraging locally-run, open-source models like Llama 3.1 and Whisper, also underscores the feasibility of developing powerful, secure, and privacy-preserving AI tools for healthcare. It serves as a robust proof-of-concept for how modern AI techniques can be tailored to solve specific, high-impact problems within the medical field, moving beyond generic applications to create tools that are genuinely useful and aligned with the needs of clinicians.
+The successful implementation of InsightBridge, leveraging locally-run, open-source models like Gemma3 and Whisper, also underscores the feasibility of developing powerful, secure, and privacy-preserving AI tools for healthcare. It serves as a robust proof-of-concept for how modern AI techniques can be tailored to solve specific, high-impact problems within the medical field, moving beyond generic applications to create tools that are genuinely useful and aligned with the needs of clinicians.
 
 \section{Future Work and Clinical Integration}
 
