docs: enrich bibliography with comprehensive ASR, NLP, and resource references  - Add entries for developer resources: OpenAI Cookbook, Pinecone, Hugging Face Transformers, spaCy, NLTK, Jinja, python-docx, Mermaid.js, Lucidchart   - Include speech and TTS corpora: Kaggle Medical Speech & Transcriptions, PhysioNet EGD-CXR/B2AI/MIMIC-CXR, Oyez, ATCOSIM, Apollo 11 Landing Audio, SPGISpeech, AMI Meeting Corpus, OpenSLR (LibriSpeech, SLR51, SLR108), MediaSum, NPR Interviews, LJ Speech, Medical Dialogue System   - Add TED datasets and translations: TED Translate, TED-LIUM   - Add Turkish language resources: Common Voice (17.0), Khan Academy Turkish (Math & General), ELRA-S0206, CLARIN ParlaMint, Turkish Parliament Texts, Turkish Law & Constitutional Court datasets   - Include additional corpora and data portals: UCI TTC-3600, KAP Ayrıntılı Veri, TCMB Minutes, TWNERTC, Turkish Writings, Dergipark Veterinary Journal   and update gitignore

--- a/report/refs.bib
+++ b/report/refs.bib
@@ -110,3 +110,358 @@
     year    = {2024},
     url     = {https://huggingface.co/Omerhan/intfloat-fine-tuned-14376-v4}
 }
+
+@online{openai_whisper_blog,
+    author = {{OpenAI}},
+    title = {Introducing Whisper},
+    year = {2022},
+    url = {https://openai.com/blog/whisper}
+}
+
+@online{google_stt_docs,
+    author = {{Google Cloud}},
+    title = {Google Cloud Speech-to-Text Documentation},
+    url = {https://cloud.google.com/speech-to-text/docs}
+}
+
+@online{langchain_qa_docs,
+    author = {{LangChain Team}},
+    title = {Use cases: Question answering},
+    url = {https://python.langchain.com/docs/use_cases/question_answering}
+}
+
+@online{openai_cookbook_semantic,
+    author = {{OpenAI}},
+    title = {OpenAI Cookbook: Semantic text search using embeddings},
+    url = {https://github.com/openai/openai-cookbook/blob/main/examples/Semantic_text_search_using_embeddings.ipynb}
+}
+
+@online{pinecone_docs,
+    author = {{Pinecone}},
+    title = {Pinecone Documentation},
+    url = {https://pinecone.io/docs}
+}
+
+@online{openai_api_ref,
+    author = {{OpenAI}},
+    title = {OpenAI API Reference},
+    url = {https://platform.openai.com/docs/api-reference}
+}
+
+@online{hf_transformers_docs,
+    author = {{Hugging Face}},
+    title = {Hugging Face Transformers Documentation},
+    url = {https://huggingface.co/docs/transformers/index}
+}
+
+@online{spacy_docs,
+    author = {{Explosion AI}},
+    title = {spaCy 101: Everything you need to know},
+    url = {https://spacy.io/usage/spacy-101}
+}
+
+@online{nltk_book,
+    author = {Steven Bird and Ewan Klein and Edward Loper},
+    title = {Natural Language Processing with Python},
+    url = {https://www.nltk.org/book}
+}
+
+@online{jinja_docs,
+    author = {{The Pallets Projects}},
+    title = {Jinja Documentation},
+    url = {https://jinja.palletsprojects.com/en/3.1.x}
+}
+
+@online{python_docx_docs,
+    author = {{Steve Canny}},
+    title = {python-docx Documentation},
+    url = {https://python-docx.readthedocs.io/en/latest}
+}
+
+@online{mermaid_js,
+    author = {{Mermaid.js}},
+    title = {Mermaid.js Documentation},
+    url = {https://mermaid.js.org}
+}
+
+@online{lucidchart,
+    author = {{Lucidchart}},
+    title = {Basic Flowchart Template},
+    url = {https://lucidchart.com/pages/examples/basic-flowchart-template}
+}
+
+@online{dataset_kaggle_medical_speech,
+    author = {Paul Mooney},
+    title = {Medical Speech, Transcription, and Intent},
+    url = {https://www.kaggle.com/datasets/paultimothymooney/medical-speech-transcription-and-intent}
+}
+
+@online{dataset_kaggle_medical_transcriptions,
+    author = {Tanya Boyle},
+    title = {Medical Transcriptions},
+    url = {https://www.kaggle.com/datasets/tboyle10/medicaltranscriptions}
+}
+
+@online{dataset_physionet_egdcxr,
+    author = {{PhysioNet}},
+    title = {Emergency Department and Chest Radiograph-associated voice recordings (EGD-CXR)},
+    url = {https://physionet.org/content/egd-cxr/1.0.0/}
+}
+
+@online{dataset_physionet_b2ai,
+    author = {{PhysioNet}},
+    title = {The B2AI Voice and Clinical Dataset},
+    url = {https://physionet.org/content/b2ai-voice/}
+}
+
+@online{dataset_physionet_mimic_cxr,
+    author = {{PhysioNet}},
+    title = {MIMIC-CXR},
+    url = {https://physionet.org/content/mimic-cxr}
+}
+
+@online{dataset_oyez,
+    author = {{Oyez}},
+    title = {Oyez Project},
+    url = {https://www.oyez.org/}
+}
+
+@online{dataset_hf_atcosim,
+    author = {Jzuluaga},
+    title = {ATCOSIM Corpus},
+    url = {https://huggingface.co/datasets/Jzuluaga/atcosim_corpus}
+}
+
+@online{dataset_ieee_apollo11,
+    author = {{IEEE DataPort}},
+    title = {Fearless Steps - Apollo 11 Landing Audio},
+    url = {https://ieee-dataport.org/documents/fearless-steps-apollo-11-landing-audio}
+}
+
+@online{dataset_kensho_spgispeech,
+    author = {{Kensho}},
+    title = {SPGISpeech Dataset},
+    url = {https://datasets.kensho.com/datasets/spgispeech}
+}
+
+@online{dataset_ami_corpus,
+    author = {{AMI Project}},
+    title = {The AMI Meeting Corpus},
+    url = {http://groups.inf.ed.ac.uk/ami/corpus/}
+}
+
+@online{dataset_openslr_51,
+    author = {{OpenSLR}},
+    title = {SLR51 - Russian speech, 16kHz},
+    url = {https://www.openslr.org/51}
+}
+
+@online{dataset_hf_mediasum,
+    author = {nbroad},
+    title = {MediaSum},
+    url = {https://huggingface.co/datasets/nbroad/mediasum}
+}
+
+@online{dataset_kaggle_doctor_patient,
+    author = {Azmayen Sabil},
+    title = {Doctor Patient Conversation (Large)},
+    url = {https://www.kaggle.com/datasets/azmayensabil/doctor-patient-conversation-large}
+}
+
+@online{dataset_github_how2,
+    author = {srvk},
+    title = {How2 Dataset},
+    url = {https://github.com/srvk/how2-dataset}
+}
+
+@online{dataset_mozilla_commonvoice,
+    author = {{Mozilla}},
+    title = {Common Voice},
+    url = {https://commonvoice.mozilla.org/en/datasets}
+}
+
+@online{dataset_openslr_12,
+    author = {{OpenSLR}},
+    title = {SLR12 - LibriSpeech ASR corpus},
+    url = {https://www.openslr.org/12}
+}
+
+@online{dataset_openi,
+    author = {{National Library of Medicine}},
+    title = {Open-i},
+    url = {https://openi.nlm.nih.gov/}
+}
+
+@online{dataset_hf_gigaspeech,
+    author = {speechcolab},
+    title = {GigaSpeech},
+    url = {https://huggingface.co/datasets/speechcolab/gigaspeech}
+}
+
+@online{dataset_ldc_switchboard,
+    author = {{Linguistic Data Consortium}},
+    title = {Switchboard-1 Release 2},
+    url = {https://catalog.ldc.upenn.edu/LDC97S62}
+}
+
+@online{dataset_ldc_fisher,
+    author = {{Linguistic Data Consortium}},
+    title = {Fisher English Training Speech},
+    url = {https://catalog.ldc.upenn.edu/LDC2004S13}
+}
+
+@online{dataset_kaggle_npr_interviews,
+    author = {Shuyang Li},
+    title = {Interview (NPR media) dialog transcripts},
+    url = {https://www.kaggle.com/datasets/shuyangli94/interview-npr-media-dialog-transcripts}
+}
+
+@online{dataset_ljspeech,
+    author = {Keith Ito},
+    title = {The LJ Speech Dataset},
+    url = {https://keithito.com/LJ-Speech-Dataset/}
+}
+
+@online{dataset_github_medical_dialogue,
+    author = {{UCSD-AI4H}},
+    title = {Medical-Dialogue-System},
+    url = {https://github.com/UCSD-AI4H/Medical-Dialogue-System}
+}
+
+@online{resource_ted_translate,
+    author = {{TED}},
+    title = {TED Translate},
+    url = {https://www.ted.com/translate}
+}
+
+@online{dataset_ldc_tedlium,
+    author = {{Linguistic Data Consortium}},
+    title = {TED-LIUM Release 2},
+    url = {https://catalog.ldc.upenn.edu/LDC2012S06}
+}
+
+@online{dataset_openslr_108,
+    author = {{OpenSLR}},
+    title = {SLR108 - Multilingual TEDx},
+    url = {https://www.openslr.org/108/}
+}
+
+@online{dataset_hf_khanacademy_tr_math,
+    author = {ysdede},
+    title = {Khan Academy Turkish Math Subtitles},
+    url = {https://huggingface.co/datasets/ysdede/khanacademy-turkish-math}
+}
+
+@online{dataset_hf_khanacademy_tr,
+    author = {ysdede},
+    title = {Khan Academy Turkish Subtitles},
+    url = {https://huggingface.co/datasets/ysdede/khanacademy-turkish}
+}
+
+@online{dataset_hf_commonvoice_tr,
+    author = {{Mozilla Foundation}},
+    title = {Common Voice 17.0 - Turkish},
+    url = {https://huggingface.co/datasets/mozilla-foundation/common_voice_17_0/viewer/tr/train}
+}
+
+@online{dataset_elra_turkish_broadcast,
+    author = {{ELRA}},
+    title = {ELRA-S0206 Turkish Broadcast News},
+    url = {https://catalogue.elra.info/en-us/repository/browse/ELRA-S0206/}
+}
+
+@online{dataset_clarin_parlamint,
+    author = {{CLARIN}},
+    title = {ParlaMint: Comparable Parliamentary Corpora},
+    url = {https://www.clarin.eu/parlamint}
+}
+
+@online{dataset_github_turkish_parliament,
+    author = {Onur Güngör},
+    title = {Turkish Parliament Texts},
+    url = {https://github.com/onurgu/turkish-parliament-texts}
+}
+
+@online{dataset_kaggle_turkish_law,
+    author = {Batuhan Kalem},
+    title = {Turkish Law Dataset for LLM Finetuning},
+    url = {https://www.kaggle.com/datasets/batuhankalem/turkish-law-dataset-for-llm-finetuning}
+}
+
+@online{dataset_hf_turkish_constitutional_court,
+    author = {{KocLab-Bilkent}},
+    title = {Turkish Constitutional Court Decisions},
+    url = {https://huggingface.co/datasets/KocLab-Bilkent/turkish-constitutional-court}
+}
+
+@online{resource_tnc_corpus,
+    author = {{Turkish National Corpus}},
+    title = {Turkish National Corpus},
+    url = {http://www.tnc.org.tr/}
+}
+
+@online{dataset_hf_medturkquad,
+    author = {incidelen},
+    title = {MedTurkQuAD},
+    url = {https://huggingface.co/incidelen/MedTurkQuAD}
+}
+
+@online{resource_tscorpus,
+    author = {{TS Corpus}},
+    title = {TS Corpus},
+    url = {http://tscorpus.com}
+}
+
+@online{resource_dergipark_vet,
+    author = {{Dergipark}},
+    title = {Veteriner Hekimler Derneği Dergisi},
+    url = {https://dergipark.org.tr/tr/pub/veterinary}
+}
+
+@online{resource_saglik_gov_112,
+    author = {{T.C. Sağlık Bakanlığı}},
+    title = {112 Eğitim Kitabı},
+    url = {https://saglik.gov.tr/tr/112-egitim-kitabi}
+}
+
+@online{dataset_hf_turkish_finance,
+    author = {yusufbaykaloglu},
+    title = {Turkish Finance Dataset},
+    url = {https://huggingface.co/datasets/yusufbaykaloglu/turkish-finance-dataset}
+}
+
+@online{dataset_kemik_haber,
+    author = {{KEMİK}},
+    title = {42bin Haber Metni},
+    url = {http://kemik.yildiz.edu.tr/datasets/42bin_haber.rar}
+}
+
+@online{dataset_uci_ttc3600,
+    author = {{UCI Machine Learning Repository}},
+    title = {TTC-3600: A Real-World Dataset for Turkish Text Categorization},
+    url = {https://archive.ics.uci.edu/ml/datasets/TTC-3600}
+}
+
+@online{resource_kap_veri,
+    author = {{Kamuyu Aydınlatma Platformu}},
+    title = {Ayrıntılı Veri Yayın},
+    url = {https://www.kap.org.tr/tr/Duyuru/AyrintiliVeri}
+}
+
+@online{resource_tcmb_minutes,
+    author = {{TCMB}},
+    title = {PPK Toplantı Tutanakları},
+    url = {https://www.tcmb.gov.tr/wps/wcm/connect/tr/tcmb+tr/main/meetings/minutes}
+}
+
+@online{dataset_mendeley_twnertc,
+    author = {{Mendeley Data}},
+    title = {Turkish Wikipedia Named Entity Recognition and Text Categorization (TWNERTC) Dataset},
+    url = {https://data.mendeley.com/datasets/twnertc/1}
+}
+
+@online{dataset_github_turkish_writings,
+    author = {{Bilkent-NLP}},
+    title = {Turkish Writings Dataset},
+    url = {https://github.com/bilkent-nlp/turkish-writings-dataset}
+}
